--- a/my_portfolio/style.css
+++ b/my_portfolio/style.css
@@ -9,6 +9,11 @@ body{
 }
 
 
+html{
+  scroll-behavior: smooth;
+}
+
+
 .nav_container{
     width: 100%;
     background-color: rgb(0, 0, 0);
@@ -27,7 +32,14 @@ body{
 .left_nav .head {
     margin-top: 5px; /*  5px from the top  */
 }
-
+.left_nav .head a{
+  text-decoration: none;
+  color: white;
+}
+.left_nav .head a:hover{
+  color: rgb(67, 67, 230);
+  transition: 0.5s;
+}
 .left_nav .head .mytitle{
     font-size: 35px;
     font-weight: bold;
@@ -433,7 +445,7 @@ body{
   }
 .container3{
     background-color: rgb(29, 29, 29);
-    height: 2290px;
+    height: 2230px;
     width:100%;
 }
 
@@ -464,19 +476,20 @@ body{
 .container3 .project .projectcontainer{
   width:80%;
   height: 600px;
-  background-color: red;
+  background-color: black;
   align-self: center;
   margin-top: 45px;
   display: flex;
   flex-direction: row;
   align-items: center;
+  border-radius: 50px;
 }
 
 
 .container3 .project .projectcontainer .projectimg{
   width:50%;
   height:90%;
-  background-color: #0A66C2;
+  background-color: rgb(29, 29, 29);
   display: flex;
   align-items:center;
 }
@@ -504,15 +517,17 @@ body{
 .container3 .project .projectcontainer .projectcontent{
   width:50%;
   height:90%;
-  background-color: gold;
+  background-color: black;
   display: flex;
   justify-content: center;
 }
 .container3 .project .projectcontainer .projectcontent .projecttext{
-  width: 95%;
+  width: 85%;
   height:80%;
-  background-color: aliceblue;
+  background-color: black;
   align-self: center;
+  color: white;
+  line-height: 30px;
 }
 
 
@@ -652,4 +667,33 @@ body{
   height: 1000px;
   width: 100%;
   background-color: rgb(29, 29, 29);
+}
+
+.container5 .msg_container{
+  /* margin-top: 30px; */
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(29, 29, 29);
+}
+
+.container5 .msg_container .msg_header{
+  margin-top: 100px;
+  width: 70%;
+  height:150px;
+  background-color: black;
+  align-self: center;
+  /* border-bottom: 2px dashed white; */
+  border-radius: 90px 0px 90px 0px;
+}
+.container5 .msg_container .msg_header .msg_text
+{
+  font-size: 60px;
+  text-align: center;
+  padding-top: 75px;
+  
+}
+
+.container5 .msg_container{
+
 }
